[gd_scene load_steps=6 format=3 uid="uid://da252uuj77v1x"]

[ext_resource type="Script" path="res://Levels/level.gd" id="1_pbfaq"]
[ext_resource type="PackedScene" uid="uid://b26p4sbiy1of8" path="res://scenes/player.tscn" id="4_g7cpp"]
[ext_resource type="PackedScene" uid="uid://ccjyfn81os7o1" path="res://scenes/PauseMenu.tscn" id="4_k56nl"]
[ext_resource type="PackedScene" uid="uid://1wxbwiwhodqv" path="res://scenes/DeadMenu.tscn" id="4_tsvm3"]
[ext_resource type="PackedScene" uid="uid://61mf6bkcj6y2" path="res://UI/Ammo.tscn" id="6_hovn8"]

[node name="level" type="Node2D"]
script = ExtResource("1_pbfaq")

[node name="Projectiles" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("4_g7cpp")]

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-4, 8)
zoom = Vector2(2.5, 2.5)

[node name="ammo" parent="." instance=ExtResource("6_hovn8")]

[node name="DeadMenu" parent="ammo" instance=ExtResource("4_tsvm3")]

[node name="PauseMenu" parent="ammo" instance=ExtResource("4_k56nl")]
process_mode = 3

[connection signal="player_continue_reload" from="Player" to="ammo" method="_on_player_continue_reload"]
[connection signal="player_died" from="Player" to="." method="_on_player_died"]
[connection signal="player_pause_reload" from="Player" to="ammo" method="_on_player_pause_reload"]
[connection signal="player_reload_over" from="Player" to="." method="_on_player_player_reload_over"]
[connection signal="player_reload_over" from="Player" to="ammo" method="_on_player_player_reload_over"]
[connection signal="player_shoot" from="Player" to="." method="_on_player_shoot"]
[connection signal="player_start_reload" from="Player" to="." method="_on_player_start_reload"]
[connection signal="player_start_reload" from="Player" to="ammo" method="_on_player_start_reload"]
